--- a/residential-services.html
+++ b/residential-services.html
@@ -305,26 +305,26 @@
             <button class="prevButton nav-button">◀</button>
             <div class="image-container">
                 <div class="images-wrapper">
-                    <img src="assets/images/wardrobe/3cc8accb-b555-4944-8db9-5ee0ddc16af1.jpg" alt="Image 5" class="gallery-image">
-                    <img src="assets/images/wardrobe/3e3d4e11-d4fc-4dfe-ae2a-cde3e550d3cd.jpg" alt="Image 6" class="gallery-image">
-                    <img src="assets/images/wardrobe/4fba9d8c-eaa1-42a5-85f3-0531b6898db2.jpg" alt="Image 7" class="gallery-image">
-                    <img src="assets/images/wardrobe/5ea1bcc2-d66e-42ce-8171-a8fc0eef3f5e.jpg" alt="Image 8" class="gallery-image">
-                    <img src="assets/images/wardrobe/6f8b6ad1-427e-4511-bf57-d0eb091dda9e.jpg" alt="Image 8" class="gallery-image">
-                    <img src="assets/images/wardrobe/7aba11fd-e7bf-4379-a23d-71e4f0a41ef1.jpg" alt="Image 5" class="gallery-image">
-                    <img src="assets/images/wardrobe/7e40a188-398d-4908-a13c-164e2f9a7de8.jpg" alt="Image 6" class="gallery-image">
-                    <img src="assets/images/wardrobe/8a3dee61-7bd8-47a7-838d-ad7074227191.jpg" alt="Image 7" class="gallery-image">
-                    <img src="assets/images/wardrobe/8cee4afc-545d-436d-880e-ef9d8e9da41e.jpg" alt="Image 8" class="gallery-image">
-                    <img src="assets/images/wardrobe/83f4f4dd-410f-47b6-bdb1-31cbadf252c1.jpg" alt="Image 8" class="gallery-image">
-                    <img src="assets/images/wardrobe/9426d629-6af5-4018-8177-ccab1de77506.jpg" alt="Image 5" class="gallery-image">
-                    <img src="assets/images/wardrobe/57633d8e-f79d-4862-bfc3-df55e216cfcc.jpg" alt="Image 6" class="gallery-image">
-                    <img src="assets/images/wardrobe/0771377b-98e9-4894-912f-e7c2675fc21c.jpg" alt="Image 7" class="gallery-image">
-                    <img src="assets/images/wardrobe/a73bb51a-54b5-4c21-9ab0-da8b94ac3f08.jpg" alt="Image 8" class="gallery-image">
-                    <img src="assets/images/wardrobe/d17361b2-af96-4d94-89f5-9f2b59e69869.jpg" alt="Image 8" class="gallery-image">
-                    <img src="assets/images/wardrobe/IMG_2212.JPG" alt="Image 5" class="gallery-image">
-                    <img src="assets/images/wardrobe/IMG_3235.jpg" alt="Image 6" class="gallery-image">
-                    <img src="assets/images/wardrobe/IMG_3724.jpg" alt="Image 7" class="gallery-image">
-                    <img src="assets/images/wardrobe/IMG_3729.jpg" alt="Image 8" class="gallery-image">
-                    <img src="assets/images/wardrobe/IMG_3732.jpg" alt="Image 8" class="gallery-image">
+                    <img src="images/wordrobes/1.png" alt="Image 5" class="gallery-image">
+                    <img src="images/wordrobes/2.png" alt="Image 6" class="gallery-image">
+                    <img src="images/wordrobes/3.png" alt="Image 7" class="gallery-image">
+                    <img src="images/wordrobes/4.png" alt="Image 8" class="gallery-image">
+                    <img src="images/wordrobes/5.png" alt="Image 8" class="gallery-image">
+                    <img src="images/wordrobes/6.png" alt="Image 5" class="gallery-image">
+                    <img src="images/wordrobes/7.png" alt="Image 6" class="gallery-image">
+                    <img src="images/wordrobes/8.png" alt="Image 7" class="gallery-image">
+                    <img src="images/wordrobes/9.png" alt="Image 8" class="gallery-image">
+                    <img src="images/wordrobes/10.png" alt="Image 8" class="gallery-image">
+                    <img src="images/wordrobes/11.png" alt="Image 5" class="gallery-image">
+                    <img src="images/wordrobes/12.png" alt="Image 6" class="gallery-image">
+                    <img src="images/wordrobes/13.png" alt="Image 7" class="gallery-image">
+                    <img src="images/wordrobes/14.png" alt="Image 8" class="gallery-image">
+                    <img src="images/wordrobes/15.png" alt="Image 8" class="gallery-image">
+                    <img src="images/wordrobes/16.png" alt="Image 5" class="gallery-image">
+                    <img src="images/wordrobes/17.png" alt="Image 6" class="gallery-image">
+                    <img src="images/wordrobes/18.png" alt="Image 7" class="gallery-image">
+                    <img src="images/wordrobes/19.png" alt="Image 8" class="gallery-image">
+                    <img src="images/wordrobes/20.png" alt="Image 8" class="gallery-image">
                 </div>
             </div>
             <button class="nextButton nav-button">▶</button>
