--- a/residential-services.html
+++ b/residential-services.html
@@ -336,26 +336,26 @@
             <button class="prevButton nav-button">◀</button>
             <div class="image-container">
                 <div class="images-wrapper">
-                    <img src="assets/images/livingroom/IMG_0597.jpg" alt="Image 9" class="gallery-image">
-                    <img src="assets/images/livingroom/fd93ec90-ddc3-4177-941e-9359fb1f8da7.jpg" alt="Image 10" class="gallery-image">
-                    <img src="assets/images/livingroom/f9590f02-ba8f-4db7-9a87-7e6d744da101.jpg" alt="Image 11" class="gallery-image">
-                    <img src="assets/images/livingroom/e1c515ba-7411-426c-aef0-db759ad81fbb.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/livingroom/c8ee426c-0e7d-4013-8f22-e85d701c50f9.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/livingroom/b7f2bedc-2f13-4909-9514-b77acba78cb3.jpg" alt="Image 9" class="gallery-image">
-                    <img src="assets/images/livingroom/0508025f-4aa8-4f85-af97-c3a393903683.jpg" alt="Image 10" class="gallery-image">
-                    <img src="assets/images/livingroom/594d3ee1-6cba-43e0-816d-8161ab08b3db.jpg" alt="Image 11" class="gallery-image">
-                    <img src="assets/images/livingroom/99f59dc0-8499-4d70-8cf4-be90e87eeade.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/livingroom/80baced8-382e-46c2-ac62-4a9b04c03c2e.jpg" alt="Image 12" class="gallery-image">
+                    <img src="images/livingrooms/1.png" alt="Image 9" class="gallery-image">
+                    <img src="images/livingrooms/2.png" alt="Image 10" class="gallery-image">
+                    <img src="images/livingrooms/3.png" alt="Image 11" class="gallery-image">
+                    <img src="images/livingrooms/4.png" alt="Image 12" class="gallery-image">
+                    <img src="images/livingrooms/5.png" alt="Image 12" class="gallery-image">
+                    <img src="images/livingrooms/6.png" alt="Image 9" class="gallery-image">
+                    <img src="images/livingrooms/7.png" alt="Image 10" class="gallery-image">
+                    <img src="images/livingrooms/8.png" alt="Image 11" class="gallery-image">
+                    <img src="images/livingrooms/9.png" alt="Image 12" class="gallery-image">
+                    <img src="images/livingrooms/10.png" alt="Image 12" class="gallery-image">
 
-                    <img src="assets/images/livingroom/074f643c-eb8d-4b4f-a645-a88cbfe92834.jpg" alt="Image 10" class="gallery-image">
-                    <img src="assets/images/livingroom/67dd1a04-682b-4614-a89d-6895c2ec5fe5.jpg" alt="Image 11" class="gallery-image">
-                    <img src="assets/images/livingroom/30f17832-ddf8-4acc-8f0f-70926e8f67d9.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/livingroom/7ea51aa4-5200-4cab-b5e2-ac81a209891a.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/livingroom/7b84c5a3-ccd1-4031-b6cc-d788e4da741f.jpg" alt="Image 9" class="gallery-image">
-                    <img src="assets/images/livingroom/6e99db22-5ca3-4a27-9555-2995a03f8bc8.jpg" alt="Image 10" class="gallery-image">
-                    <img src="assets/images/livingroom/5e389605-315f-4cd4-b03e-632327a9131c.jpg" alt="Image 11" class="gallery-image">
-                    <img src="assets/images/livingroom/4ba452eb-9513-4095-aa2c-878abb237952.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/livingroom/0b3206ed-509c-47f4-b81a-698911059425.jpg" alt="Image 12" class="gallery-image">
+                    <img src="images/livingrooms/11.png" alt="Image 10" class="gallery-image">
+                    <img src="images/livingrooms/12.png" alt="Image 11" class="gallery-image">
+                    <img src="images/livingrooms/13.png" alt="Image 12" class="gallery-image">
+                    <img src="images/livingrooms/14.png" alt="Image 12" class="gallery-image">
+                    <img src="images/livingrooms/15.png" alt="Image 9" class="gallery-image">
+                    <img src="images/livingrooms/16.png" alt="Image 10" class="gallery-image">
+                    <img src="images/livingrooms/17.png" alt="Image 11" class="gallery-image">
+                    <img src="images/livingrooms/18.png" alt="Image 12" class="gallery-image">
+                    <img src="images/livingrooms/19.png" alt="Image 12" class="gallery-image">
                 </div>
             </div>
             <button class="nextButton nav-button">▶</button>
@@ -368,23 +368,23 @@
             <button class="prevButton nav-button">◀</button>
             <div class="image-container">
                 <div class="images-wrapper">
-                    <img src="assets/images/tvunit/7e1e4aa4-9147-4af7-be5f-debc2f1c66fd.jpg" alt="Image 9" class="gallery-image">
-                    <img src="assets/images/tvunit/9c1c2257-635e-4bf7-95b5-ea6bce379f70.jpg" alt="Image 10" class="gallery-image">
-                    <img src="assets/images/tvunit/26ab1c99-ff85-43aa-844d-112a03b0a72e.jpg" alt="Image 11" class="gallery-image">
-                    <img src="assets/images/tvunit/70cfde77-3631-4711-9b84-b1d1145d1bda.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/tvunit/91ec7403-3e6a-4691-91f9-202a306a7384.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/tvunit/116ccde9-0e2e-4596-bbda-8d2a08b9d2a1.jpg" alt="Image 9" class="gallery-image">
-                    <img src="assets/images/tvunit/417ece24-1ce4-41af-a179-97980bbb0c6a.jpg" alt="Image 10" class="gallery-image">
-                    <img src="assets/images/tvunit/544c0e6d-40db-4f5c-b67b-89ca0f78d670.jpg" alt="Image 11" class="gallery-image">
-                    <img src="assets/images/tvunit/19648a1b-311c-4679-88e9-fb98e1d2a02b.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/tvunit/b6a41d42-554a-4ddd-9609-8465c11f89ce.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/tvunit/c270bb35-0a6e-4839-8b96-7cdd8a8c5451.jpg" alt="Image 9" class="gallery-image">
-                    <img src="assets/images/tvunit/e03e2699-c2c2-4466-af4d-a01047e4298d.jpg" alt="Image 10" class="gallery-image">
-                    <img src="assets/images/tvunit/e49f4368-a83e-40af-8758-3dbcba3e2a37.jpg" alt="Image 11" class="gallery-image">
-                    <img src="assets/images/tvunit/e8479d8b-7909-423f-ab56-1000c696f65d.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/tvunit/f82c3101-45f4-4051-be65-276c7e42e897.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/tvunit/IMG_0603.jpg" alt="Image 12" class="gallery-image">
-                    <img src="assets/images/tvunit/IMG_2064.JPG" alt="Image 12" class="gallery-image">
+                    <img src="images/tvunits/14.png" alt="Image 9" class="gallery-image">
+                    <img src="images/tvunits/16.png" alt="Image 10" class="gallery-image">
+                    <img src="images/tvunits/15.png" alt="Image 11" class="gallery-image">
+                    <img src="images/tvunits/17.png" alt="Image 12" class="gallery-image">
+                    <img src="images/tvunits/13.png" alt="Image 12" class="gallery-image">
+                    <img src="images/tvunits/12.png" alt="Image 9" class="gallery-image">
+                    <img src="images/tvunits/7.png" alt="Image 10" class="gallery-image">
+                    <img src="images/tvunits/8.png" alt="Image 11" class="gallery-image">
+                    <img src="images/tvunits/9.png" alt="Image 12" class="gallery-image">
+                    <img src="images/tvunits/10.png" alt="Image 12" class="gallery-image">
+                    <img src="images/tvunits/11.png" alt="Image 9" class="gallery-image">
+                    <img src="images/tvunits/6.png" alt="Image 10" class="gallery-image">
+                    <img src="images/tvunits/5.png" alt="Image 11" class="gallery-image">
+                    <img src="images/tvunits/4.png" alt="Image 12" class="gallery-image">
+                    <img src="images/tvunits/3.png" alt="Image 12" class="gallery-image">
+                    <img src="images/tvunits/2.png" alt="Image 12" class="gallery-image">
+                    <img src="images/tvunits/1.png" alt="Image 12" class="gallery-image">
                 </div>
             </div>
             <button class="nextButton nav-button">▶</button>
@@ -397,16 +397,55 @@
              <button class="prevButton nav-button">◀</button>
              <div class="image-container">
                  <div class="images-wrapper">
-                     <img src="assets/images/poojakit/05d5a617-b15e-4397-b200-c6ff266cbaa5.jpg" alt="Image 9" class="gallery-image">
-                     <img src="assets/images/poojakit/11c6095c-2b61-4467-b72f-612f288de32b.jpg" alt="Image 10" class="gallery-image">
-                     <img src="assets/images/poojakit/e36fc06d-a736-422d-85fb-b56c67c049d8.jpg" alt="Image 11" class="gallery-image">
-                     <img src="assets/images/poojakit/IMG_2209.JPG" alt="Image 12" class="gallery-image">
-                     <img src="assets/images/poojakit/IMG_3734.jpg" alt="Image 12" class="gallery-image">
-                     <img src="assets/images/poojakit/bb6e7afe-1180-4436-86d6-062be20459df.jpg" alt="Image 12" class="gallery-image">
+                     <img src="images/pooja units/1.png" alt="Image 9" class="gallery-image">
+                     <img src="images/pooja units/2.png" alt="Image 10" class="gallery-image">
+                     <img src="images/pooja units/3.png" alt="Image 11" class="gallery-image">
+                     <img src="images/pooja units/4.png" alt="Image 12" class="gallery-image">
+                     <img src="images/pooja units/5.png" alt="Image 12" class="gallery-image">
+                     <img src="images/pooja units/6.png" alt="Image 12" class="gallery-image">
+
+                     <img src="images/pooja units/7.png" alt="Image 12" class="gallery-image">
+                    
                  </div>
              </div>
              <button class="nextButton nav-button">▶</button>
          </div>
+
+
+  <!-- Ceiling Image Gallery -->
+  <h3 class="text-center main-heading">Bed Room</h3>
+  <div class="image-gallery">
+      <button class="prevButton nav-button">◀</button>
+      <div class="image-container">
+          <div class="images-wrapper">
+              <img src="images/bedrooms/1.png" alt="Image 9" class="gallery-image">
+              <img src="images/bedrooms/2.png" alt="Image 10" class="gallery-image">
+              <img src="images/bedrooms/3.png" alt="Image 11" class="gallery-image">
+              <img src="images/bedrooms/4.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/5.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/6.png" alt="Image 9" class="gallery-image">
+              <img src="images/bedrooms/7.png" alt="Image 10" class="gallery-image">
+              <img src="images/bedrooms/8.png" alt="Image 11" class="gallery-image">
+              <img src="images/bedrooms/9.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/10.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/11.png" alt="Image 9" class="gallery-image">
+              <img src="images/bedrooms/12.png" alt="Image 10" class="gallery-image">
+              <img src="images/bedrooms/13.png" alt="Image 11" class="gallery-image">
+              <img src="images/bedrooms/14.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/15.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/16.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/17.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/18.png" alt="Image 12" class="gallery-image">
+             
+          </div>
+      </div>
+      <button class="nextButton nav-button">▶</button>
+  </div>
+
+
+
+
+
 
           <!-- Ceiling Image Gallery -->
           <h3 class="text-center main-heading">Ceiling</h3>
@@ -437,6 +476,10 @@
               </div>
               <button class="nextButton nav-button">▶</button>
           </div>
+
+
+
+
 
            <!-- lighting Image Gallery -->
          <h3 class="text-center main-heading">Lighting</h3>
