--- a/index.html
+++ b/index.html
@@ -518,21 +518,22 @@
                   <div class="bubble-section">
                       <div class="bubble-row">
                           <div class="bubble bubble-large">
-                              <img src="images/abou.png" alt="Image 1">
+                            <img src="images/residence/kitchensss/3.png" alt="Image 1">
+                             
                               <span class="tag">Tag 1</span>
                           </div>
                           <div class="bubble bubble-small">
-                              <img src="images/abou.png" alt="Image 2">
+                              <img src="images/livingrooms/19.png" alt="Image 2">
                               <span class="tag">Tag 2</span>
                           </div>
                       </div>
                       <div class="bubble-row">
                           <div class="bubble bubble-small">
-                              <img src="images/abou.png" alt="Image 3">
+                              <img src="images/tvunits/18.png" alt="Image 3">
                               <span class="tag">Tag 3</span>
                           </div>
                           <div class="bubble bubble-large">
-                              <img src="images/abou.png" alt="Image 4">
+                            <img src="images/bedrooms/11.png" alt="Image 4">
                               <span class="tag">Tag 4</span>
                           </div>
                       </div>
