--- a/residential-services.html
+++ b/residential-services.html
@@ -436,6 +436,10 @@
               <img src="images/bedrooms/16.png" alt="Image 12" class="gallery-image">
               <img src="images/bedrooms/17.png" alt="Image 12" class="gallery-image">
               <img src="images/bedrooms/18.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/19.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/20.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/21.png" alt="Image 12" class="gallery-image">
+              <img src="images/bedrooms/22.png" alt="Image 12" class="gallery-image">
              
           </div>
       </div>
