--- a/index.html
+++ b/index.html
@@ -311,23 +311,23 @@
     <div class="scroll-container">
       <!-- Image items -->
       <div class="scroll-item">
-        <img src="images/living-room-2155376_1920.jpg" alt="Image 1">
+        <img src="images/pooja units/3.png" alt="Image 1">
         <a href="about.html"><div class="text-overlay">Blessings start here</div></a>
       </div>
       <div class="scroll-item">
-        <img src="images/living-room-2155376_1920.jpg" alt="Image 2">
+        <img src="images/livingrooms/18.png" alt="Image 2">
         <div class="text-overlay">Home is where the living room is</div>
       </div>
       <div class="scroll-item">
-        <img src="images/living-room-2155376_1920.jpg" alt="Image 3">
+        <img src="images/residence/kitchensss/11.png" alt="Image 3">
         <div class="text-overlay">Where flavors come alive</div>
       </div>
       <div class="scroll-item">
-        <img src="images/living-room-2155376_1920.jpg" alt="Image 4">
+        <img src="images/bedrooms/6.png" alt="Image 4">
         <div class="text-overlay">Rest and recharge</div>
       </div>
       <div class="scroll-item">
-        <img src="images/living-room-2155376_1920.jpg" alt="Image 5">
+        <img src="images/wordrobes/3.png" alt="Image 5">
         <div class="text-overlay">Embrace your wardrobe</div>
       </div>
       <div class="scroll-item">
