--- a/index.html
+++ b/index.html
@@ -361,22 +361,24 @@
         <div class="text-overlay">Embrace your wardrobe</div>
       </div>
       <div class="scroll-item">
-        <img src="images/living-room-2155376_1920.jpg" alt="Image 6">
+        <img src="images/lightings.png" alt="Image 6">
         <div class="text-overlay">Lighting is design’s finishing touch</div>
       </div>
      
       <div class="scroll-item">
-        <img src="images/living-room-2155376_1920.jpg" alt="Image 7">
+        <img src="images/dinnings.png" alt="Image 7">
         <div class="text-overlay">Breaking bread together</div>
       </div>
-    <div class="scroll-item">
+
+<!-- <div class="scroll-item">
         <img src="images/living-room-2155376_1920.jpg" alt="Image 8">
         <div class="text-overlay">Your viewing pleasure hub.</div>
       </div> 
       <div class="scroll-item">
         <img src="images/living-room-2155376_1920.jpg" alt="Image 9">
         <div class="text-overlay">The fifth wall of elegance</div>
-      </div> 
+      </div>  -->
+
     </div>
   </div>
 </div>
