--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@
 
   .button-block {
     flex: 1;
-    max-width: 40%;
+    max-width: 25%;
     display: flex;
     justify-content: center;
   }
@@ -1300,7 +1300,7 @@
 
   /* Fixed background section */
   .fixed-background-part {
-      background-image: url('images/topbanner.jpg');
+      background-image: url('images/tst-bg.jpg');
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
