--- a/index.html
+++ b/index.html
@@ -1235,48 +1235,62 @@
             <div class="reviews-wrapper">
               <div class="reviews-slider" id="reviews">
                 <div class="review-item review-background">
-                  <h4 class="reviewer-name text-white"><strong>Sudhakar Avula</strong></h4>
+                  <h4 class="reviewer-name text-white"><strong>
+                    Pavan Deshpande</strong></h4>
                   <div class="review-stars">&#9733; &#9733; &#9733; &#9733; &#9734;</div>
                   <p class="review-text text-white fst-italic">
                     <strong>
-                      We were a little hesitant at the beginning but after talking to them, we were sure that these people can do good work and they did! Skilled and professional, they did an outstanding job! Pradeep sir and team were amazing. Totally recommend to my friends and family!
+                      S R Interiors and Realtors exceeded my expectations with their impeccable service. From the moment I contacted them, their team displayed professionalism and expertise. They transformed my space into a stunning masterpiece, paying attention to every detail.
+                       I highly recommend them for their exceptional design skills and outstanding customer service!
                     </strong>
                   </p>
                 </div>
                 <div class="review-item review-background">
-                  <h4 class="reviewer-name text-white"><strong>Anil Malayanur</strong></h4>
+                  <h4 class="reviewer-name text-white"><strong>
+                    Vineeth Korvi</strong></h4>
                   <div class="review-stars">&#9733; &#9733; &#9733; &#9733; &#9734;</div>
                   <p class="review-text text-white fst-italic">
                     <strong>
-                      We went with Home Swarga for our interiors in Vasavi Srinilayam, LB Nagar. Initially hesitant, after discussions, we felt confident. Skilled workers, very professional and responsive. They plan according to our budget and deliver on time.
+                      I recently hired S R Interiors for my new home interiors, and I must say that I am extremely satisfied with their services. The team was very professional, knowledgeable and easy to work with.
+
                     </strong>
                   </p>
                 </div>
 
                 <div class="review-item review-background">
-                  <h4 class="reviewer-name text-white"><strong>Immortal Wisdom</strong></h4>
+                  <h4 class="reviewer-name text-white"><strong>
+                    ravula mounika</strong></h4>
                   <div class="review-stars">&#9733; &#9733; &#9733; &#9733; &#9734;</div>
                   <p class="review-text text-white fst-italic">
                     <strong>
-                      For reliable construction work for your dream house, this company is the place. I had my first floor built by them and they gave me visionary suggestions. Thanks!
+                      Well designed, organised according to the customer needs, creative team with intrinsic details.
+                      Positive
+                      Quality
+                      
+                      Services
+                      Bathroom design, Refurbishment, Wardrobe design, Cabinetry and hardware design, Appliance selection, Space planning
                     </strong>
                   </p>
                 </div>
                 <div class="review-item review-background">
-                  <h4 class="reviewer-name text-white"><strong>Immortal Wisdom</strong></h4>
+                  <h4 class="reviewer-name text-white"><strong>
+                    Bhargav Velugoti</strong></h4>
                   <div class="review-stars">&#9733; &#9733; &#9733; &#9733; &#9734;</div>
                   <p class="review-text text-white fst-italic">
                     <strong>
-                      For reliable construction work for your dream house, this company is the place. I had my first floor built by them and they gave me visionary suggestions. Thanks!
+                      The quality of the materials used was top-notch, and the attention to detail was impeccable. The end result was a beautifully 
+                      designed and functional space that exceeded my expectations.
                     </strong>
                   </p>
                 </div>
                 <div class="review-item review-background">
-                  <h4 class="reviewer-name text-white"><strong>Immortal Wisdom</strong></h4>
+                  <h4 class="reviewer-name text-white"><strong>
+                    MUTHINENI LATHA SREE</strong></h4>
                   <div class="review-stars">&#9733; &#9733; &#9733; &#9733; &#9734;</div>
                   <p class="review-text text-white fst-italic">
                     <strong>
-                      For reliable construction work for your dream house, this company is the place. I had my first floor built by them and they gave me visionary suggestions. Thanks!
+                      Budget friendly,On time & fast delivery,one of the best
+                       services I had seen till now in hyderabad.thank you SR INTERIORS!!
                     </strong>
                   </p>
                 </div>
@@ -1613,19 +1627,19 @@
       <img src="images/wordrobes/13.png" alt="Image 6">
     </div>
     <div class="gallery-image-row" id="row3">
-      <img src="images/tvunits/9.png" alt="Image 7">
-      <img src="images/wordrobes/6.png" alt="Image 8">
-      <img src="images/wordrobes/13.png" alt="Image 9">
+      <img src="images/tvunits/20.png" alt="Image 7">
+      <img src="images/residence/kitchensss/14.png" alt="Image 8">
+      <img src="images/pooja units/7.png" alt="Image 9">
     </div>
     <div class="gallery-image-row" id="row4">
       <img src="images/tvunits/9.png" alt="Image 10">
-      <img src="images/wordrobes/6.png" alt="Image 11">
-      <img src="images/wordrobes/13.png" alt="Image 12">
+      <img src="images/residence/kitchensss/23.png" alt="Image 11">
+      <img src="images/pooja units/5.png" alt="Image 12">
     </div>
     <div class="gallery-image-row" id="row5">
-      <img src="images/tvunits/9.png" alt="Image 13">
-      <img src="images/wordrobes/6.png" alt="Image 14">
-      <img src="images/wordrobes/13.png" alt="Image 15">
+      <img src="images/livingrooms/16.png" alt="Image 13">
+      <img src="images/bedrooms/15.png" alt="Image 14">
+      <img src="images/livingrooms/5.png" alt="Image 15">
     </div>
   </div>
 
@@ -1786,7 +1800,7 @@
   }
 
   .gallery-bubble.active {
-    background-color: #4CAF50; /* Green for active bubble */
+    background-color: #D49826; /* Green for active bubble */
     color: white; /* White text for active bubble */
   }
 
