--- a/contact.html
+++ b/contact.html
@@ -313,7 +313,7 @@
                   </svg>
                   <div>
                     <h4>Phone Number</h4>
-                    <h6><a href="tel:+919985599655" style="color: #afafaf;">+91  99630 43888</a></h6>
+                    <h6><a href="tel:+919985599655" style="color: #afafaf;">+91 9963043888</a></h6>
                   </div>
                 </div>
                 <div>
