--- a/renovation-services.html
+++ b/renovation-services.html
@@ -566,7 +566,7 @@
         </li>
         <li>
           <i class="bi bi-telephone me-2"></i
-          ><a href="tel:+919985599655" style="color:#fff !important;">+91  99855 99655 </a>
+          ><a href="tel:+919985599655" style="color:#fff !important;">+91 9963043888 </a>
         </li>
       </ul>
       <div class="social">
