--- a/contact.html
+++ b/contact.html
@@ -312,7 +312,7 @@
                     </g>
                   </svg>
                   <div>
-                    <h4>Phone Number</h4>
+                    <h4 class="text-dark">Phone Number</h4>
                     <h6><a href="tel:+919985599655" style="color: #afafaf;">+91 9963043888</a></h6>
                   </div>
                 </div>
@@ -331,7 +331,7 @@
                     </svg>
                   </button>
                   <div>
-                    <h4>Email Address</h4>
+                    <h4 class="text-dark">Email Address</h4>
                     <h6>srinteriors@gmail.com</h6>
                   </div>
                 </div>
@@ -352,7 +352,7 @@
                   </button>
 
                   <div>
-                    <h4>Address</h4>
+                    <h4 class="text-dark">Address</h4>
                      <!-- <h4 class="footer-heading" style="color: #e45c0c;" >Thinkwalls Global Private Limited </h4> -->
                     <h6>
                    Hyderabad
@@ -469,7 +469,7 @@
               </li>
               <li>
                 <i class="bi bi-telephone me-2"></i
-                ><a href="tel:+919985599655" style="color:#fff !important;">+91  99855 99655 </a>
+                ><a href="tel:+919985599655" style="color:#fff !important;">+91 9963043888 </a>
               </li>
             </ul>
             <div class="social">
