--- a/index.html
+++ b/index.html
@@ -1970,8 +1970,8 @@
           </ul>
           <div class="social">
             <a href="https://www.facebook.com/srdesignstudio?mibextid=kFxxJD" target="_b"><i class="bi bi-facebook"></i></a>
-            <!-- <a href="#"><i class="bi bi-twitter"></i></a>
-            <a href="#"><i class="bi bi-linkedin"></i></a> -->
+       <a href="#"><i class="bi bi-twitter"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
             <a href="https://www.instagram.com/studiosr/?fbclid=IwAR1Z0oQfiFNVHoCtUgxBlQmEa7Dz3uW1ffcGmXIPwkrE9noH_6YzKQxozXY" target="_b"><i class="bi bi-instagram"></i></a>
           </div>
         </div>
